--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
-name = "aws-iam"
+name = "aws-tmp-keys-fetcher"
 version = "0.0.1"
-description = "AWS IAM fetcher - simple command-line tool to fetch temporary aws credentials and stores them in your configs so that third party that require actual access keys can work with them."
+description = "AWS temporary keys fetcher - simple command-line tool to fetch temporary aws credentials and stores them in your configs so that third party that require actual access keys can work with them."
 authors = ["Gerco Grandia <gerco.grandia@4synergy.nl>"]
 include = ["pyproject.toml"]
 license = "MIT"
 readme = "README.md"
-homepage = "https://github.com/gercograndia/aws-iam"
-repository = "https://github.com/gercograndia/aws-iam"
-documentation = "https://github.com/gercograndia/aws-iam/blob/master/README.md"
+homepage = "https://github.com/gercograndia/aws-tmp-keys-fetcher"
+repository = "https://github.com/gercograndia/aws-tmp-keys-fetcher"
+documentation = "https://github.com/gercograndia/aws-tmp-keys-fetcher/blob/master/README.md"
 keywords = [
     "AWS",
     "IAM",
@@ -30,10 +30,10 @@ pyassert = "^0.4.2"
 pylint = "^2.5.2"
 
 [tool.poetry.scripts]
-aws-iam = "aws_iam.cli:fetch_credentials"
+aws-tmp-keys-fetcher = "aws_tmp_keys_fetcher.cli:fetch_credentials"
 
 [tool.poetry.urls]
-issues = "https://github.com/gercograndia/aws-iam/issues"
+issues = "https://github.com/gercograndia/aws-tmp-keys-fetcher/issues"
 
 [build-system]
 requires = ["poetry>=0.12"]
